compiler/testData/diagnostics/tests/incompleteCode/NoSenselessComparisonForErrorType.kt
package a

fun foo() {
    val a = <!UNRESOLVED_REFERENCE!>getErrorType<!>()
    if (<!DEBUG_INFO_ELEMENT_WITH_ERROR_TYPE!>a<!> <!DEBUG_INFO_MISSING_UNRESOLVED!>==<!> null) { //no senseless comparison

    }
}
